[package]
name = "cryptograpi"
version = "0.0.1"
edition = "2018"
authors = ["Rodolfo Ruiz", "Cryptograpi Team"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cryptograpi/cryptograpi_rust"
documentation = "https://docs.rs/cryptograpi"
homepage = "https://cryptograpi.dev"
description = """
API crate for use with the cryptograpi encription service.
"""
keywords = ["cryptography", "api"]
categories = ["algorithms", "no-std"]
autobenches = true
include = ["src/", "LICENSE.md", "README.md", "CHANGELOG.md", "SECURITY.md"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
